--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,6 +14,12 @@ header {
 }
 
 .nav-container {
+  h1 {
+    @media @mobile {
+      width: 100%;
+      text-align: center;
+    }
+  }
   .navigation {
     width: 60%;
     justify-content: space-around;
